test/pass/64-infer_empty_return.perk
type <T> unit = Empty

fun main(): unit@void {
    return Empty
}