test/fail/19-void_parameter_in_archetype_lambda.perk
archetype Test {
    f: (void) => void
}